fix(SubjectPage): if user view SubjectPage on small devices text 'Total votes' was not in center

--- a/src/pages/DashboardPage/SubjectPage/SubjectPage.styles.scss
+++ b/src/pages/DashboardPage/SubjectPage/SubjectPage.styles.scss
@@ -54,6 +54,7 @@
 
         .votes-name {
             padding-top: 5px;
+            text-align: center;
         }
     }
 
